# miru

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  validate_refactor.py
docs/: CODEBASE-REVIEW.md  FASE1-COMPLETED.md  FASE2-COMPLETED.md  FASE3-COMPLETED.md  REFACTORING.md  TUTORIAL.md  tools-plan.md
examples/: tavily_example.py
miru/: __init__.py  alias.py  cli.py  cli_options.py  completion.py  config.py  config_manager.py  history.py  inference_params.py  latex_unicode.py  logger.py  renderer.py  session.py  template.py  tool_integration.py
miru/commands/: __init__.py  batch.py  chat.py  compare.py  config_cmd.py  copy.py  delete.py  embed.py  examples.py  history_cmd.py  info.py  list.py  logs.py  pull.py  quick.py  run.py  setup.py  status.py  tools_cmd.py
miru/core/: __init__.py  config.py  errors.py  i18n.py
miru/input/: __init__.py  audio.py  file.py  image.py
miru/model/: __init__.py  capabilities.py
miru/ollama/: __init__.py  client.py
tests/: __init__.py  test_capabilities.py  test_cli.py  test_client.py  test_commands_batch.py  test_commands_compare.py  test_commands_copy.py  test_commands_delete.py  test_commands_embed.py  test_commands_i18n.py  test_commands_info.py  test_commands_list.py  test_commands_pull.py  test_config.py  test_core_config.py  test_core_errors.py  test_core_i18n.py  test_formatter.py  test_inference_params.py  test_input_audio.py  test_input_file.py  test_input_image.py  test_integration.py  test_latex_unicode.py  test_live_stream.py  test_renderer.py  test_system_prompts.py  test_ui_render.py
(+35 files in other folders)
